--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,12 @@
+.DS_Store
 node_modules
 dist
+
+dist.zip
+
+# Local .terraform directories
+**/.terraform/*
+
+# .tfstate files
+**/*.tfstate
+**/*.tfstate.*
