--- a/package.json
+++ b/package.json
@@ -7,20 +7,23 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "start": "ts-node-dev -r tsconfig-paths/register --inspect --transpile-only --ignore-watch node_modules src/shared/infrastructure/http/index.ts"
+    "start": "ts-node-dev -r tsconfig-paths/register --inspect --transpile-only --ignore-watch node_modules src/shared/infrastructure/http/index.ts",
+    "build": "rm -rf dist && tsc && tscpaths -p tsconfig.json -s ./ -o ./dist",
+    "postbuild": "cp package.json yarn.lock dist && cd dist && yarn install --prod"
   },
   "devDependencies": {
-    "@types/aws-serverless-express": "^3.3.5",
     "@types/express": "^4.17.13",
     "ts-node-dev": "^1.1.8",
     "tsconfig-paths": "^3.12.0",
+    "tscpaths": "^0.0.9",
     "typescript": "^4.5.2"
   },
   "dependencies": {
+    "@types/aws-lambda": "^8.10.85",
     "@types/cors": "^2.8.12",
+    "@vendia/serverless-express": "^4.5.2",
     "add": "^2.0.6",
     "aws-lambda": "^1.0.7",
-    "aws-serverless-express": "^3.4.0",
     "class-transformer": "^0.3.1",
     "class-validator": "^0.12.2",
     "cors": "^2.8.5",
