--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,12 @@
 {
   "compilerOptions": {
     "strict": true,
+    "rootDir": "./",
     "baseUrl": ".",
     "outDir": "./dist",
-    "target": "es2020",
+    "target": "ES2020",
     "module": "commonjs",
+    "moduleResolution": "node",
     "esModuleInterop": true,
     "sourceMap": true,
     "forceConsistentCasingInFileNames": true,
