--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
   "scripts": {
     "start": "ts-node-dev -r tsconfig-paths/register --inspect --transpile-only --ignore-watch node_modules src/shared/infrastructure/http/index.ts",
     "build": "rm -rf dist && tsc && tscpaths -p tsconfig.json -s ./ -o ./dist",
-    "postbuild": "cp package.json yarn.lock dist && cd dist && yarn install --prod"
+    "postbuild": "cp package.json yarn.lock .env dist && cd dist && yarn install --prod",
+    "typeorm": "ts-node-dev -r tsconfig-paths/register ./node_modules/typeorm/cli.js"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/node": "^16.11.11",
     "ts-node-dev": "^1.1.8",
     "tsconfig-paths": "^3.12.0",
     "tscpaths": "^0.0.9",
@@ -27,11 +29,14 @@
     "class-transformer": "^0.3.1",
     "class-validator": "^0.12.2",
     "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "http-status-codes": "^2.1.4",
     "inversify": "^6.0.1",
+    "mysql": "^2.18.1",
     "reflect-metadata": "^0.1.13",
     "routing-controllers": "^0.9.0",
+    "typeorm": "^0.2.41",
     "yarn": "^1.22.17"
   }
 }
