--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-TYPEORM_CONNECTION=
-TYPEORM_HOST=
-TYPEORM_USERNAME=
-TYPEORM_PASSWORD=
-TYPEORM_DATABASE=
-TYPEORM_PORT=
+DB_CONNECTION=mysql
+DB_HOST=mysql_db
+DB_USERNAME=docker
+DB_PASSWORD=docker
+DB_DATABASE=app_db
+DB_PORT=3306
