--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,8 @@
-DB_CONNECTION=mysql
 DB_HOST=mysql_db
 DB_USERNAME=docker
 DB_PASSWORD=docker
 DB_DATABASE=app_db
 DB_PORT=3306
+DB_LOGGING=true
+
+APP_PORT=3000
