--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,18 +6,24 @@ orbs:
 
 jobs:
   deploy-prod:
-    machine:
-      image: ubuntu-2004:202111-0
-    resource_class: medium
-    working_directory: ~/
     environment:
       AWS_ACCESS_KEY_ID: ''
       AWS_SECRET_ACCESS_KEY: ''
       AWS_DEFAULT_REGION: ''
+
+    executor: terraform/default
     steps:
-      - run:
-          name: Deploys code to production
-          command: terraform apply --auto-approve
+      - checkout
+      - terraform/init:
+          path: ./infrastructure
+      - terraform/validate:
+          path: ./infrastructure
+      - terraform/fmt:
+          path: ./infrastructure
+      - terraform/plan:
+          path: ./infrastructure
+      - terraform/apply:
+          path: ./infrastructure
 
 workflows:
   version: 2
